<resources>
    <string name="app_name">ru.myuniquenickname.appname</string>
    <string name="back">Back</string>
    <string name="_13">13+</string>
    <string name="avengers">Avengers:\nEnd Game</string>
    <string name="avengers_name">Avengers: End Game</string>
    <string name="genre">Action, Adventure, Fantasy</string>
    <string name="avengers_genre">Action, Adventure, Drama</string>
    <string name="reviews">125 Reviews</string>
    <string name="storyline">Storyline</string>
    <string name="description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert&#10;Downey Jr.</string>
    <string name="chris_evans">Chris&#10;&#160;&#160;&#xA0;&#xA0;&#xA0;&#10;Evans</string>
    <string name="mark_ruffalo">Mark&#10;&#160;&#160;&#xA0;&#10;Ruffalo</string>
    <string name="chris_hemsworth">Chris&#10;Hemsworth</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_title">Movies List</string>
    <string name="avengers_duration">137 min</string>
</resources>