<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/orig"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/orig" />

        <ImageView
            android:id="@+id/mask"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/mask" />

        <ImageView
            android:id="@+id/path"
            android:layout_width="6dp"
            android:layout_height="10dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="59dp"
            android:src="@drawable/img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/back"
            android:layout_width="28dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            android:alpha="0.5"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/path"
            app:layout_constraintTop_toTopOf="@id/orig" />

        <TextView
            android:id="@+id/_13"
            android:layout_width="24dp"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="56dp"
            android:text="@string/_13"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintStart_toStartOf="@id/orig" />

        <ImageView
            android:id="@+id/rectangle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="52dp"
            android:src="@drawable/rectangle"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintStart_toStartOf="@id/orig" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:includeFontPadding="false"
            android:text="@string/avengers"
            android:textColor="@color/avengers"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="@id/orig"
            app:layout_constraintStart_toStartOf="@id/orig"
            app:layout_constraintTop_toBottomOf="@id/_13" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:includeFontPadding="false"
            android:text="@string/genre"
            android:textColor="@color/genre1"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/orig"
            app:layout_constraintStart_toStartOf="@id/orig"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <ImageView
            android:id="@+id/star1"
            android:layout_width="13dp"
            android:layout_height="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/star"
            app:layout_constraintEnd_toStartOf="@id/star2"
            app:layout_constraintStart_toStartOf="@id/orig"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="13dp"
            android:layout_height="12dp"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/star"
            app:layout_constraintEnd_toStartOf="@id/star3"
            app:layout_constraintStart_toEndOf="@id/star1"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="13dp"
            android:layout_height="12dp"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/star"
            app:layout_constraintEnd_toStartOf="@id/star4"
            app:layout_constraintStart_toEndOf="@id/star2"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="13dp"
            android:layout_height="12dp"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/star"
            app:layout_constraintEnd_toStartOf="@id/star5"
            app:layout_constraintStart_toEndOf="@id/star3"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="13dp"
            android:layout_height="12dp"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/grey_star"
            app:layout_constraintEnd_toStartOf="@id/reviews"
            app:layout_constraintStart_toEndOf="@id/star4"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:includeFontPadding="false"
            android:text="@string/reviews"
            android:textAllCaps="true"
            android:textColor="@color/reviewColor"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/star5"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:includeFontPadding="false"
            android:text="@string/storyline"
            android:textColor="@color/avengers"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline2" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:alpha="0.75"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storyline" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <ImageView
            android:id="@+id/robert"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/robert"
            app:layout_constraintEnd_toStartOf="@+id/chris"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cast" />

        <ImageView
            android:id="@+id/chris"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/chris"
            app:layout_constraintEnd_toStartOf="@+id/mark"
            app:layout_constraintStart_toEndOf="@id/robert"
            app:layout_constraintTop_toBottomOf="@id/cast" />

        <ImageView
            android:id="@+id/mark"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/mark"
            app:layout_constraintEnd_toStartOf="@+id/tor"
            app:layout_constraintStart_toEndOf="@id/chris"
            app:layout_constraintTop_toBottomOf="@id/cast" />

        <ImageView
            android:id="@+id/tor"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/tor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/mark"
            app:layout_constraintTop_toBottomOf="@id/cast" />

        <TextView
            android:id="@+id/robertText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/robert_downey_jr"
            android:textColor="@color/castColor"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/robert"
            app:layout_constraintStart_toStartOf="@id/robert"
            app:layout_constraintTop_toBottomOf="@+id/robert" />

        <TextView
            android:id="@+id/christText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/chris_evans"
            android:textColor="@color/castColor"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/chris"
            app:layout_constraintStart_toStartOf="@id/chris"
            app:layout_constraintTop_toBottomOf="@+id/chris" />

        <TextView
            android:id="@+id/markText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/mark_ruffalo"
            android:textColor="@color/castColor"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/mark"
            app:layout_constraintStart_toStartOf="@id/mark"
            app:layout_constraintTop_toBottomOf="@+id/mark" />

        <TextView
            android:id="@+id/torText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/chris_hemsworth"
            android:textColor="@color/castColor"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tor"
            app:layout_constraintStart_toStartOf="@id/tor"
            app:layout_constraintTop_toBottomOf="@+id/tor" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="298dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="406dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>