<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/avengers_frame"
        android:layout_width="170dp"
        android:layout_height="296dp"
        android:background="@drawable/avengers_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="11dp">

        <ImageView
            android:id="@+id/avengers"
            android:layout_width="166dp"
            android:layout_height="244dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/avengers_background"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            android:src="@drawable/avengers" />

        <ImageView
            android:id="@+id/avengers_like"
            android:layout_width="16dp"
            android:layout_height="14dp"
            android:layout_marginStart="146dp"
            android:layout_marginTop="13dp"
            android:src="@drawable/like" />

        <ImageView
            android:id="@+id/avengers_mask"
            android:layout_width="166dp"
            android:layout_height="246dp"
            android:layout_marginStart="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avengers_mask" />

        <TextView
            android:id="@+id/avengers_age_limit_13"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/avengers_age_limit_background"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/_13"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/avengers_genre"
            android:layout_width="146dp"
            android:layout_height="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="214dp"
            android:text="@string/avengers_genre"
            android:textColor="@color/genre1"
            android:textSize="8sp" />

        <ImageView
            android:id="@+id/avengers_star1"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="228dp"
            android:src="@drawable/star" />

        <ImageView
            android:id="@+id/avengers_star2"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="228dp"
            android:src="@drawable/star" />

        <ImageView
            android:id="@+id/avengers_star3"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="228dp"
            android:src="@drawable/star" />

        <ImageView
            android:id="@+id/avengers_star4"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="228dp"
            android:src="@drawable/star" />

        <ImageView
            android:id="@+id/avengers_star5"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="228dp"
            android:src="@drawable/grey_star" />

        <TextView
            android:id="@+id/avengers_reviews"
            android:layout_width="53dp"
            android:layout_height="8dp"
            android:layout_marginStart="62dp"
            android:layout_marginTop="228dp"
            android:includeFontPadding="false"
            android:text="@string/reviews"
            android:textAllCaps="true"
            android:textColor="@color/reviewColor"
            android:textSize="8sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/avengers_name"
            android:layout_width="132dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="256dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="20dp"
            android:text="@string/avengers_name"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/avengers_duration"
            android:layout_width="154dp"
            android:layout_height="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="276dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/avengers_duration"
            android:textAllCaps="true"
            android:textColor="@color/avengersDurationColor"
            android:textSize="8sp"
            android:textStyle="bold" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>